--- a/templates/detalle_cliente.html
+++ b/templates/detalle_cliente.html
@@ -28,9 +28,11 @@
                     <div class="form-group">
                         <label for="avatar">Cambiar foto de perfil:</label>
                         <input type="hidden" name="cliente_id" value="{{ clienta.id }}">
-                                                <input type="file" id="avatar" name="avatar" accept="image/*" required class="form-control" data-camera-gallery-choice="true">
+                                                <input type="file" id="avatar" name="avatar" accept="image/*" class="hidden-file-input" data-camera-gallery-choice="true">
                     </div>
-                    <button type="submit" style="width:100%;">Subir Foto</button>
+                    <!-- Buttons to trigger file input -->
+                    <button type="button" class="btn btn-primary" data-target-input="avatar" data-action="camera">Tomar Foto</button>
+                    <button type="button" class="btn btn-secondary" data-target-input="avatar" data-action="gallery">Seleccionar de Galería</button>
                 </form>
             </div>
         </div>
@@ -63,8 +65,11 @@
                                             {% if turno.foto_path %}Cambiar foto{% else %}Subir foto{% endif %}:
                                         </label>
                                         <!-- Este único input le dará a elegir al usuario entre galería o cámara en el móvil -->
-                                        <input type="file" id="foto-turno-{{ turno.id }}" name="foto_turno" accept="image/*" class="form-control" required data-camera-gallery-choice="true">
+                                        <input type="file" id="foto-turno-{{ turno.id }}" name="foto_turno" accept="image/*" class="hidden-file-input" data-camera-gallery-choice="true">
                                     </div>
+                                    <!-- Buttons to trigger file input -->
+                                    <button type="button" class="btn btn-primary" data-target-input="foto-turno-{{ turno.id }}" data-action="camera">Tomar Foto</button>
+                                    <button type="button" class="btn btn-secondary" data-target-input="foto-turno-{{ turno.id }}" data-action="gallery">Seleccionar de Galería</button>
                                     <button type="submit">Guardar Foto</button>
                                 </form>
                             </div>
