--- a/templates/detalle_cliente.html
+++ b/templates/detalle_cliente.html
@@ -33,6 +33,7 @@
                     <!-- Buttons to trigger file input -->
                     <button type="button" class="btn btn-primary" data-target-input="avatar" data-action="camera">Tomar Foto</button>
                     <button type="button" class="btn btn-secondary" data-target-input="avatar" data-action="gallery">Seleccionar de Galería</button>
+                    <button type="submit" style="width:100%;">Subir Foto</button>
                 </form>
             </div>
         </div>
