modificacion de estilo en pagina detalles y creacion de popup para agregar nuevos clientes

--- a/templates/base.html
+++ b/templates/base.html
@@ -125,5 +125,6 @@
         }
     </script>
     <script src="{{ url_for('static', filename='upload_handler.js', v=now_timestamp) }}"></script>
+    {% block scripts %}{% endblock %}
 </body>
 </html>
